--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <main>
 
       <header>
-        <h1>Jeff Delaney</h1>
+        <h1>Howdy</h1>
         <p>🚀 Welcome to my website!</p>
       </header>
 
 
       <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
+        <p>I like making stuff and putting it to go viral!!</p>
       </blockquote>
 
       <section>
@@ -54,13 +54,13 @@
       </section>
 
       <blockquote>
-        <p>The best way out is always through <br>-Robert Frost</p>
+        <p>The best way out is not always the hardest </p>
       </blockquote>
 
       <section class="left">
         <h2>🌮 Work History</h2>
 
-        <h3>McDonalds</h3>
+        <h3>Only KFC not fuckin mcdonald's</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
@@ -76,7 +76,7 @@
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>Thanks for visitting!</p>
       </blockquote>
 
 
