--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./style.css" rel="stylesheet">
     <title>Jeff's Website</title>
   </head>
   <body>
@@ -12,7 +13,7 @@
 
     <main>
 
-      <header>
+      <header class="text-3xl font-bold underline">
         <h1>Howdy</h1>
         <p>🚀 Welcome to my website!</p>
       </header>
