added earth and R

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet">
-    <title>Jeff's Website</title>
+    <title>Ghosty's website</title>
   </head>
   <body>
 
     <canvas id="bg"></canvas>   
 
     <main>
-
+      <button class="bg-cyan-500 shadow-lg shadow-cyan-500/50 ...">Subscribe</button>
+      <button class="bg-blue-500 shadow-lg shadow-blue-500/50 ...">Subscribe</button>
+      <button class="bg-indigo-500 shadow-lg shadow-indigo-500/50 ...">Subscribe</button>
       <header class="text-3xl font-bold underline">
         <h1>Howdy</h1>
         <p>🚀 Welcome to my website!</p>
